--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,7 +16,7 @@ parts = part
 
 [part]
 recipe = minitage.recipe.cmmi
-url = ftp://${mirrors:gentoo}/gentoo/distfiles/zlib-1.2.6.tar.bz2
+url = http://${mirrors:gentoo}/distfiles/zlib-1.2.6.tar.bz2
 md5sum =dc2cfa0d2313ca77224b4d932b2911e9
 
 pre-configure-hook=${buildout:directory}/h.py:x64
@@ -31,5 +31,5 @@ patch-options=-Np1
 
 
 [mirrors]
-gentoo= gentoo.imj.fr/pub
+gentoo= gentoo.tiscali.nl
 
