--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,8 +16,8 @@ parts = part
 
 [part]
 recipe = minitage.recipe.cmmi
-url = http://${mirrors:gentoo}/distfiles/zlib-1.2.6.tar.bz2
-md5sum =dc2cfa0d2313ca77224b4d932b2911e9
+url = http://${mirrors:gentoo}/distfiles/zlib-1.2.7.tar.gz
+md5sum =60df6a37c56e7c1366cca812414f7b85
 
 pre-configure-hook=${buildout:directory}/h.py:x64
 pre-make-hook=${buildout:directory}/h.py:x64r
